k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

  annotations:
    argocd-image-updater.argoproj.io/image-list: frontend=nirmallyachakraborty/mini-gpt-frontend
    argocd-image-updater.argoproj.io/frontend.update-strategy: latest
    argocd-image-updater.argoproj.io/write-back-method: git

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: nirmallyachakraborty/mini-gpt-frontend:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 5173
